# GraphicsMidterm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
res/: shader.wgsl  webgpu.txt
src/: Implementations.cpp  Main.cpp  Main.hpp  Physics.cpp  Physics.hpp  ResourceManager.cpp  ResourceManager.hpp
